--- a/View/Shared/Layout/ProfileMenu.razor
+++ b/View/Shared/Layout/ProfileMenu.razor
@@ -6,18 +6,18 @@
         <ChildContent>
             <AuthorizeView>
                 <Authorized>
-                    <MudMenuItem href="/profile">Profile</MudMenuItem>
-                    <MudMenuItem href="/settings">Settings</MudMenuItem>
-                    <MudMenuItem OnClick="LogoutAsync" IconSize="Size.Small" IconColor="Color.Tertiary" Icon="@Icons.Material.Filled.Logout">
-                        <MudButton OnClick="LogoutAsync" Variant="Variant.Filled" Color="Color.Primary">Log Out</MudButton>
+                    <MudMenuItem href="@NavigationProvider["Profile"].Link">Profile</MudMenuItem>
+                    <MudMenuItem href="@NavigationProvider["Settings"].Link">Settings</MudMenuItem>
+                    <MudMenuItem Icon="@Icons.Material.Filled.Logout" OnClick="LogoutAsync" IconSize="Size.Small">
+                        Log out
                     </MudMenuItem>
                 </Authorized>
-                    <NotAuthorized>
-                    <MudMenuItem href="/login" IconSize="Size.Small" IconColor="Color.Tertiary" Icon="@Icons.Material.Filled.Login">
-                        <MudButton href="/login" Variant="Variant.Filled" Color="Color.Primary">Log In</MudButton>
+                <NotAuthorized>
+                    <MudMenuItem href="@NavigationProvider["Login"].Link" IconSize="Size.Small" IconColor="Color.Tertiary" Icon="@Icons.Material.Filled.Login">
+                        <MudButton href="@NavigationProvider["Login"].Link" Variant="Variant.Filled" Color="Color.Primary">Log In</MudButton>
                     </MudMenuItem>
-                    <MudMenuItem href="/register" IconSize="Size.Small" IconColor="Color.Tertiary" Icon="@Icons.Material.Filled.EmojiPeople">
-                        <MudButton href="/register" Variant="Variant.Filled" Color="Color.Secondary">Sign Up</MudButton>
+                    <MudMenuItem href="@NavigationProvider["Register"].Link" IconSize="Size.Small" IconColor="Color.Tertiary" Icon="@Icons.Material.Filled.EmojiPeople">
+                        <MudButton href="@NavigationProvider["Register"].Link" Variant="Variant.Filled" Color="Color.Secondary">Sign Up</MudButton>
                     </MudMenuItem>
                 </NotAuthorized>
             </AuthorizeView>
@@ -31,7 +31,7 @@
     public async Task LogoutAsync()
     {
         await UserService.LogoutAsync();
-        NavigationManager.NavigateTo("/login");
+        NavigationManager.NavigateTo(NavigationProvider["Login"].Link);
     }
 
 }
