--- a/View/Shared/Layout/NavMenu.razor
+++ b/View/Shared/Layout/NavMenu.razor
@@ -21,7 +21,7 @@
         }
     </ul>
     <div class="more">
-        <div style="display: flex; align-items: center; user-select: none;">
+        <div style="display: flex; align-items: center; user-select: none; margin-top: .3rem">
             <MudIconButton OnClick="@ToggleOpen" Icon="@Icons.Material.Filled.ArrowBackIos" aria-label="delete"></MudIconButton>
             <MudText Typo="Typo.h6">More</MudText>
         </div>
@@ -77,7 +77,7 @@
     {
         IsOpen = false;
         await UserService.LogoutAsync();
-        NavigationManager.NavigateTo("/login");
+        NavigationManager.NavigateTo(NavigationProvider["Login"].Link);
     }
 
     protected override async Task OnInitializedAsync()
