--- a/View/Pages/Authentication/Register.razor
+++ b/View/Pages/Authentication/Register.razor
@@ -55,7 +55,7 @@
                 Register
             </MudButton>
             <MudSpacer/>
-            <a href="/login">
+            <a href="@NavigationProvider["Login"].Link">
                 <MudText Typo="Typo.subtitle1">
                     Already have an account?
                 </MudText>
