Computer Landscape Navbar

--- a/View/Pages/Index.razor
+++ b/View/Pages/Index.razor
@@ -2,6 +2,11 @@
 
 @code {
 
+    protected override async Task OnInitializedAsync()
+    {
+        BrowserService.Init(JSRuntime);
+    }
+
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
         if (!firstRender) return;
