--- a/View/Shared/Layout/NavMenu.razor
+++ b/View/Shared/Layout/NavMenu.razor
@@ -1,212 +1,131 @@
-﻿<div class="navigation">
-    <ul>
-        @foreach (var pageElement in NavigationProvider.GetPages(PageType.CONTENT).Take(3))
+﻿<MudDrawer Breakpoint="Breakpoint.Md"
+           Class="side-menu"
+           Elevation="0"
+           MiniWidth="100px"
+           OpenMiniOnHover="ThemeHandler.SideOpenMini"
+           Variant="DrawerVariant.Mini"
+           Width="280px"
+           OpenChanged="@(value => {if (ThemeHandler.SideOpenMini) { ThemeHandler.SideOpen = value; } })"
+           DisableOverlay="true"
+           Open="ThemeHandler.SideOpen">
+    <MudDrawerHeader Class="align-center d-flex justify-center pa-0">
+        <MudIconButton Color="Color.Primary"
+                       Icon="@Icons.Filled.Home"
+                       Size="Size.Large"
+                       Href="/"/>
+    </MudDrawerHeader>
+    <MudNavMenu>
+        @foreach (var pageElement in NavigationProvider.GetPages(PageType.CONTENT))
         {
-            <li>
-                <a href="@pageElement.Link">
-                    <span class="icon">
-                        <MudIcon Icon="@pageElement.Icon" Color="Color.Inherit"/>
-                    </span>
-                    <span class="text">@pageElement.Name</span>
-                </a>
-            </li>
+            @if (pageElement.Link == "/") continue;
+            <MudNavLink Href="@(pageElement.Link)" Icon="@(pageElement.Icon)" Match="NavLinkMatch.All" Class="icon-hover">
+                <div class="d-flex">
+                    <MudText Inline="true" Style="white-space: nowrap;">@pageElement.Name</MudText>
+                </div>
+            </MudNavLink>
         }
-        @if (NavigationProvider.GetPages(PageType.CONTENT).Count > 3)
+    </MudNavMenu>
+    <MudSpacer/>
+
+    <MudNavMenu Style="margin-bottom: 1rem">
+        <MudNavLink OnClick="ToggleSideMenu" Icon="@ToggleIcon" Match="NavLinkMatch.All" Class="icon-hover">
+            <div class="d-flex">
+                <MudText Inline="true" Style="white-space: nowrap;">@ToggleText</MudText>
+            </div>
+        </MudNavLink>
+    </MudNavMenu>
+    
+    
+    <MudNavMenu Style="margin-bottom: 1rem">
+        @foreach (var pageElement in NavigationProvider.GetPages(PageType.USER))
         {
-            <li onclick="@ToggleOpen">
-                <span class="icon">
-                    <MudIcon Icon="@Icons.Material.Filled.MoreHoriz" Color="Color.Inherit"/>
-                </span>
-            </li>
+            <MudNavLink Href="@(pageElement.Link)" Icon="@(pageElement.Icon)" Match="NavLinkMatch.All" Class="icon-hover">
+                <div class="d-flex">
+                    <MudText Inline="true" Style="white-space: nowrap;">@pageElement.Name</MudText>
+                </div>
+            </MudNavLink>
         }
-    </ul>
-    <div class="more">
-        <div style="display: flex; align-items: center; user-select: none; margin-top: .3rem">
-            <MudIconButton OnClick="@ToggleOpen" Icon="@Icons.Material.Filled.ArrowBackIos" aria-label="delete"></MudIconButton>
-            <MudText Typo="Typo.h6">More</MudText>
-        </div>
-        <MudList Clickable="true" class="list">
-            <MudListSubheader class="subheadings">
-                CONTENT
-            </MudListSubheader>
-            @foreach (var pageElement in NavigationProvider.GetPages(PageType.CONTENT))
-            {
-                <MudListItem Icon="@pageElement.Icon" OnClick="() => GoTo(pageElement.Link, true)" IconColor="@pageElement.Color" class="item">
-                    @pageElement.Name
-                </MudListItem>
-            }
-            <MudListSubheader class="subheadings">
-                ACCOUNT
-            </MudListSubheader>
-            @foreach (var pageElement in NavigationProvider.GetPages(PageType.USER))
-            {
-                <MudListItem Icon="@pageElement.Icon" OnClick="() => GoTo(pageElement.Link, true)" IconColor="@pageElement.Color" class="item">
-                    @pageElement.Name
-                </MudListItem>
-            }
-            <MudListItem Icon="@Icons.Material.Filled.Logout" OnClick="LogoutAsync" class="item">
-                Log out
-            </MudListItem>
-        </MudList>
-    </div>
-</div>
+        <MudNavLink OnClick="LogoutAsync" Icon="@Icons.Material.Filled.Logout" Match="NavLinkMatch.All" Class="icon-hover">
+            <div class="d-flex">
+                <MudText Inline="true" Style="white-space: nowrap;">Log Out</MudText>
+            </div>
+        </MudNavLink>
+    </MudNavMenu>
+</MudDrawer>
 
 @code {
 
     [CascadingParameter]
     public MainLayout? MainLayout { get; set; }
 
-    public bool IsOpen;
-
-    public void ToggleOpen()
-    {
-        if (IsOpen)
-            IsOpen = false;
-        else
-            IsOpen = true;
-    }
-
-    public void GoTo(string link, bool shouldClose)
-    {
-        if (shouldClose)
-            IsOpen = false;
-        NavigationManager.NavigateTo(link);
-    }
+    string ToggleIcon = Icons.Material.Filled.ArrowDropDownCircle;
+    string ToggleText = "Responsive";
 
     public async Task LogoutAsync()
     {
-        IsOpen = false;
         await UserService.LogoutAsync();
         NavigationManager.NavigateTo(NavigationProvider["Login"].Link);
     }
 
     protected override async Task OnInitializedAsync()
     {
+        
+    }
+
+    public async Task ToggleSideMenu()
+    {
+        switch (ThemeHandler.ESideMenuState)
+        {
+            case ESideMenuState.Maximized:
+                ThemeHandler.UpdateSideMenu(ESideMenuState.Responsive);
+                ToggleIcon = Icons.Material.Filled.ArrowDropDownCircle;
+                ToggleText = "Responsive";
+                break;
+            case ESideMenuState.Responsive:
+                ThemeHandler.UpdateSideMenu(ESideMenuState.Minimized);
+                ToggleIcon = Icons.Material.Filled.ArrowCircleLeft;
+                ToggleText = "Minimized";
+                break;
+            case ESideMenuState.Minimized:
+                ThemeHandler.UpdateSideMenu(ESideMenuState.Maximized);
+                ToggleIcon = Icons.Material.Filled.ArrowCircleRight;
+                ToggleText = "Maximized";
+                break;
+        }
+        StateHasChanged();
     }
 
 }
 
 <style>
-    .navigation {
-        position: fixed;
-        height: 4rem;
-        bottom: -0.1rem;
-        left: 0rem;
-        right: 0rem;
-        
-        border-top-left-radius: .8rem;
-        border-top-right-radius: .8rem;
-        background: @(MainLayout.IsDarkMode ? ThemeHandler.Theme.PaletteDark.White : ThemeHandler.Theme.Palette.Black);
-       
-        transition: all .4s ease-in-out;
-        z-index: 1000;
+    .icon-hover:hover {
+        background: none;
     }
     
-    .navigation .more {
-        position: absolute;
-        opacity: 0;
-        user-select: none;
-        transition: all .4s ease-in-out;
-        margin: 3vw;
-        width:  100%;
-    } 
-        
-    .navigation .more .list {
-        transition: all .4s ease-in-out;
-        height: 0vh;
-        /*Hide scrolling animation behind navigation bar*/
-        transform: translateY(-4rem);
-        overflow-y: scroll;
-        overflow-x: hidden;
+    .toggle-button {
+        border-radius: 1000px !important;
     }
     
-    .navigation .more .list .subheadings {
-        margin-bottom: -.5rem;
-        color: @(MainLayout.IsDarkMode ? ThemeHandler.Theme.PaletteDark.Warning : ThemeHandler.Theme.Palette.Secondary);
+    .icon-hover:hover .mud-icon-root {
+        fill: @(MainLayout.IsDarkMode ? ThemeHandler.Theme.PaletteDark.Secondary : ThemeHandler.Theme.Palette.SecondaryDarken);
     }
     
-    .navigation .more .list .subheadings:not(:first-of-type) {
-        margin-top: 2rem;
+    .mud-nav-link {
+        white-space: normal !important;
+        padding: 12px 16px 12px 38px;
     }
     
-    .navigation ul {
-        position: absolute;
-        bottom: 0;
-        display: flex;
-        justify-content: space-around;
-        width: 90vw;
-        margin-left: 5vw;
+    .mud-nav-link:hover {
+        color: @(MainLayout.IsDarkMode ? ThemeHandler.Theme.PaletteDark.Secondary : ThemeHandler.Theme.Palette.SecondaryDarken);
+        background-color: blue;
     }
     
-    .navigation ul li {
-        position: relative;
-        list-style: none;
-        width: 4rem;
-        height: 4rem;
-        z-index: 1;
+    .mud-navmenu.mud-navmenu-default .mud-nav-link.active:not(.mud-nav-link-disabled) {
+        background-color: rgba(@(MainLayout.IsDarkMode ? ThemeHandler.Theme.PaletteDark.Primary : ThemeHandler.Theme.Palette.PrimaryDarken), 0.1);
+        border-right: 3px solid @(MainLayout.IsDarkMode ? ThemeHandler.Theme.PaletteDark.Primary : ThemeHandler.Theme.Palette.PrimaryDarken);
     }
     
-    .navigation ul li a {
-        position: relative;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        width: 100%;
-        text-align: center;
-        font-weight: 500;
+    .side-menu {
+        border-right: 1px solid rgba(@(MainLayout.IsDarkMode ? ThemeHandler.Theme.PaletteDark.Secondary : ThemeHandler.Theme.Palette.SecondaryDarken), 0.4);
     }
-    
-    .navigation ul li .icon {
-        position: relative;
-        display: block;
-        line-height: 4.4rem;
-        font-size: 1.5em;
-        text-align: center;
-        transition: 0.5s;
-        color: @(MainLayout.IsDarkMode ? ThemeHandler.Theme.PaletteDark.Dark : ThemeHandler.Theme.Palette.White);
-    }
-    
-    .navigation ul li .text {
-        position: absolute;
-        color: @(MainLayout.IsDarkMode ? ThemeHandler.Theme.PaletteDark.Black : ThemeHandler.Theme.Palette.White);
-        font-weight: 400;
-        font-size: 0.75em;
-        letter-spacing: 0.05em;
-        opacity: 0;
-        transition: 0.5s;
-        transform: translateY(1rem);
-    }  
 </style>
-
-@if (IsOpen)
-{
-    <style>        
-        .navigation {
-            height: 101vh;            
-            border-top-left-radius: 0rem;
-            border-top-right-radius: 0rem;
-            background: @(MainLayout.IsDarkMode ? ThemeHandler.Theme.PaletteDark.Black : ThemeHandler.Theme.Palette.Black);
-        }
-        
-        .navigation ul li .icon {
-            color: @(MainLayout.IsDarkMode ? ThemeHandler.Theme.PaletteDark.White : ThemeHandler.Theme.Palette.White);
-        }
-        
-        .navigation ul li .text {
-            color: @(MainLayout.IsDarkMode ? ThemeHandler.Theme.PaletteDark.White : ThemeHandler.Theme.Palette.White);
-        }        
-        
-        .navigation .more {
-            position: absolute;
-            opacity: 1;
-            user-select: all;
-            transition: all .4s ease-in-out;
-        }
-        
-        .navigation .more .list {
-            height: 85vh;
-            transform: translateY(0rem);
-        }
-    </style>
-}
