--- a/View/Pages/_Host.cshtml
+++ b/View/Pages/_Host.cshtml
@@ -6,3 +6,7 @@
 }
 
 <component type="typeof(App)" render-mode="ServerPrerendered"/>
+
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity=”sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj” crossorigin=”anonymous”></script>
+<script src="js/listener.js"></script>
