--- a/View/Shared/Layout/MainLayout.razor
+++ b/View/Shared/Layout/MainLayout.razor
@@ -4,6 +4,8 @@
 <MudDialogProvider/>
 <MudSnackbarProvider/>
 
+<PageTitle>WebApp</PageTitle>
+
 <MudLayout>
     @if (BrowserService.IsPortrait)
     {
